<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/orientacao_pagamento"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pagamento_label_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_compra"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_valor_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/pagamento_label_valor_compra"
        app:layout_constraintTop_toBottomOf="@id/pagamento_label_valor_compra"
        tools:text="R$ 420,00" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pagamento_valor_compra"
        app:layout_constraintStart_toStartOf="@id/pagamento_valor_compra"
        app:layout_constraintEnd_toEndOf="@id/pagamento_valor_compra"
        android:hint="@string/numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pagamento_mes_vencimento"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/mes_vencimento"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/pagamento_cvc"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pagamento_ano_vencimento"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/ano_vencimento"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_vencimento"
        app:layout_constraintBottom_toBottomOf="@id/pagamento_cvc"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pagamento_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:gravity="center"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome_cartao"
        android:inputType="text"
        android:digits="@string/mascara_nome_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_mes_vencimento"
        app:layout_constraintTop_toBottomOf="@id/pagamento_cvc"
        app:layout_constraintEnd_toEndOf="@id/pagamento_cvc"
        android:autofillHints="" />

    <Button
        android:id="@+id/pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/botao_redondo_laranja"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_cartao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/botao_finalizar_compra" />

</androidx.constraintlayout.widget.ConstraintLayout>