<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResumoCompraActivity">

    <ImageView
        android:id="@+id/resumo_compra_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/descricao_label_resumo_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resumo_compra_label_parabens"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_parabens"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner_inicial" />

    <TextView
        android:id="@+id/resumo_compra_label_sucesso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_sucesso_compra"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_label_parabens"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner_inicial" />

    <TextView
        android:id="@+id/resumo_compra_label_confira_resumo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resumo_compra"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/resumo_compra_imagem"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/descricao_imagem_resumo_compra"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_label_confira_resumo"
        tools:src="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="São Paulo"
        android:textSize="14sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_imagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="08/12 - 10/12 de 2018"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_local"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_local" />

    <TextView
        android:id="@+id/resumo_compra_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 249,99"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_data"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_data" />

</androidx.constraintlayout.widget.ConstraintLayout>