<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/activity_pacotes_viagem_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/descricao_banner_pacotes_viagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/activity_pacotes_viagem_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/especiais"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/activity_pacotes_viagem_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/activity_pacotes_viagem_banner_inicial"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/activity_pacotes_viagem_banner_inicial"
        app:layout_constraintTop_toTopOf="@id/activity_pacotes_viagem_banner_inicial"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_pacotes_viagem_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pais"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/activity_pacotes_viagem_especiais"
        app:layout_constraintTop_toBottomOf="@+id/activity_pacotes_viagem_especiais" />

    <ListView
        android:id="@+id/activity_pacotes_viagem_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/item_pacote"
        android:divider="@null"
        app:layout_constraintTop_toBottomOf="@id/activity_pacotes_viagem_banner_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>